# qt5-sqlcipher

./: CMakeLists.txt  LICENSE.LGPLv21  README.md  smain.cpp
cmake/: FindLibsqlcipher.cmake  getPluginFolder.cpp
qt-file-cache/: fetch.php
test-shared/: CMakeLists.txt  main.cpp
